--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-final-form": "^6.5.9",
+    "react-icons": "^5.2.1",
     "yup": "^1.4.0"
   },
   "devDependencies": {
