--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "yup": "^1.4.0"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
     "@types/node": "20.14.2",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
